--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -29,7 +29,7 @@
 						<li data-value="Drama">Drama</li>
 						<li data-value="Family">Family</li>
 						<li data-value="Fantasy">Fantasy</li>
-						<li data-value="Ficção">Ficção</li>
+						<li data-value="Fiction">Fiction</li>
 						<li data-value="Film-Noir">Film-Noir</li>
 						<li data-value="History">History</li>
 						<li data-value="Horror">Horror</li>
@@ -90,9 +90,7 @@
 			<div class="container">
 				<nav aria-label="Page navigation">
 					<ul class="pagination justify-content-center my-3">
-						<li class="page-item disabled"><a class="page-link" href="#"
-							tabindex="-1">Previous</a></li>
-						<li class="page-item"><a class="page-link" href="">Next</a>
+						<li class="page-item" id="moreItem"><button class="page-link" id="buttonNext">More</button>
 						</li>
 					</ul>
 				</nav>
