--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -59,15 +59,19 @@
 			height="0" width="0" style="display: none; visibility: hidden"></iframe>
 	</noscript>
 	<!-- End Google Tag Manager (noscript) -->
+	<div align="center" class="logo">
+		<img alt="Title" src="./assets/images/logo movi2.png" height="125">
+	</div>
 	<div class="container ">
 		<div class="row justify-content-md-center my-5">
 			<div class="card border-0 pesquisa">
 				<div class="card-header px-0 py-0">
 					<ul class="categorias-list">
-						<li class="active" data-value="Action">Action</li>
+						<li data-value="Action">Action</li>
 						<li data-value="Adventure">Adventure</li>
 						<li data-value="Animation">Animation</li>
 						<li data-value="Biography">Biography</li>
+						<li data-value="Comedy">Comedy</li>
 						<li data-value="Crime">Crime</li>
 						<li data-value="Drama">Drama</li>
 						<li data-value="Family">Family</li>
@@ -92,7 +96,7 @@
 						<div class="input-group input-group-sm mySearch">
 							<div class="input-group-prepend">
 								<i class="fa fa-search"></i><span class="input-group-text"
-									data-label="Genre: Action" id="inputGroup-sizing-default"></span>
+									id="inputGroup-sizing-default"></span>
 							</div>
 							<input type="text" class="form-control" aria-label="default"
 								aria-describedby="inputGroup-sizing-default" id="user-query">
