--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -30,27 +30,27 @@
 	})(window, document, 'script', 'dataLayer', 'GTM-PS8FDCK');
 </script>
 <!-- End Google Tag Manager -->
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script async
+	src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script>
-  (adsbygoogle = window.adsbygoogle || []).push({
-    google_ad_client: "ca-pub-9202357336416930",
-    enable_page_level_ads: true
-  });
+	(adsbygoogle = window.adsbygoogle || []).push({
+		google_ad_client : "ca-pub-9202357336416930",
+		enable_page_level_ads : true
+	});
 </script>
 <title>Movies Discovery</title>
-<meta name="description" content="Movies Discovery the easy way to find, search and discovery movies and series." />
+<meta name="description"
+	content="Movies Discovery the easy way to find, search and discovery movies and series." />
 <meta name="robots" content="nofollow" />
 <meta name="google" content="nositelinkssearchbox" />
 <meta name="viewport"
 	content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 <meta charset="utf-8">
-<link rel="stylesheet"
-	href="./assets/css/bootstrap.min.css"
-	>
+<link rel="stylesheet" href="./assets/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css"
 	href="./assets/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-
+<link rel="shortcut icon" href="./assets/images/logo_movi.ico" >
 </head>
 <body ng-app="MovieManagement" ng-controller="MovieController">
 	<!-- Google Tag Manager (noscript) -->
@@ -59,12 +59,13 @@
 			height="0" width="0" style="display: none; visibility: hidden"></iframe>
 	</noscript>
 	<!-- End Google Tag Manager (noscript) -->
-	<div align="center" class="logo">
-		<img alt="Title" src="./assets/images/logo movi2.png" height="125">
-	</div>
+
 	<div class="container ">
-		<div class="row justify-content-md-center my-5">
+		<div class="logo"></div>
+		<div class="row justify-content-md-center">
 			<div class="card border-0 pesquisa">
+				<img alt="Title" src="./assets/images/logo movi.png" height="30%"
+					width="30%">
 				<div class="card-header px-0 py-0">
 					<ul class="categorias-list">
 						<li data-value="Action">Action</li>
@@ -88,7 +89,7 @@
 						<li data-value="Sport">Sport</li>
 						<li data-value="Thriller">Thriller</li>
 						<li data-value="War">War</li>
-						<li data-value="Sci-Fi">Western</li>
+						<li data-value="Western">Western</li>
 					</ul>
 				</div>
 				<div class="card-body">
@@ -150,7 +151,8 @@
 			</div>
 		</div>
 	</div>
-	<script type="text/javascript" src="./assets/js/jquery-3.2.1.slim.min.js"></script>
+	<script type="text/javascript"
+		src="./assets/js/jquery-3.2.1.slim.min.js"></script>
 	<script type="text/javascript" src="./assets/js/popper.min.js"></script>
 	<script type="text/javascript" src="./assets/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="./assets/js/angular.min.js"></script>
